feat: add create artwork form and wire up artworks page
